css/dashboard.css
/*
 * Base structure
 */

/* Move down content because we have a fixed navbar that is 50px tall */
body {
  padding-top: 50px;
  background-color: #636363;
}


h1, h2, h3, h4, h5, h6, p {
  color:#D9E0D5;
}

a {
  color: #B7BFB2;
  white-space: pre;
  word-break: break-all;
  word-wrap: break-word;
}

a:hover, a:focus {
  color: #206118;
  text-decoration: none;
}

.nav>li>a:hover, .nav>li>a:focus {
  background-color: #C5C9C3;
  border: 1px solid #206118;
}

/*
 * Global add-ons
 */

.sub-header {
  padding-bottom: 10px;
  border-bottom: 1px solid #eee;
}

/*
 * Top navigation
 * Hide default border to remove 1px line.
 */
.navbar-fixed-top {
  border: 0;
}

.navbar-inverse .navbar-brand {
  color: #DBDBDB;
}

.navbar-inverse .navbar-brand:hover, .navbar-inverse .navbar-brand:active {
  color: #DBDBDB;
}

#navbar .navbar-brand {
  width: 80%;
  text-align: center;
  margin: 0 auto;
}

/*
 * Sidebar
 */

/* Hide for mobile, show later */
.sidebar {
  display: none;
}

@media (min-width: 768px) {
  .sidebar {
    position: fixed;
    top: 50px;
    bottom: 0;
    left: 0;
    z-index: 1000;
    display: block;
    padding: 20px;
    overflow-x: hidden;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
    border-right: 1px solid #000;
  }
}

/* Sidebar navigation */
.nav-sidebar {
  margin-right: -21px; /* 20px padding + 1px border */
  margin-bottom: 20px;
  margin-left: -20px;
}

.nav-sidebar > li > a {
  margin: 10px 20px;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.nav-sidebar > .active > a,
.nav-sidebar > .active > a:hover,
.nav-sidebar > .active > a:focus {
  color: #C9C9C9;
  background-color: #206118;
  border: 1px solid #C9C9C9;
/*  border: 1px solid #1E5717;*/
}

.sidebar h5 {
  color: #DBDBDB;
}

/*
 * Main content
 */

.main {
  padding: 20px;
}
@media (min-width: 768px) {
  .main {
    padding-right: 40px;
    padding-left: 40px;
  }
}
.main .page-header {
  margin-top: 0;
}

#disconnect {
  float: right;
}

.dash-msg {
  background-color: transparent;
  margin: 3% auto;
  width: 75%;
  padding: 0.5% 0;
  border: 1px solid #ccc;
  border-radius: 4px;
/*  box-shadow: 0 1px 3px rgba(204, 204, 204, .7);*/
  box-shadow: 0 2px 5px rgba(35, 35, 35, .7);
  text-align: center;
}

.dash-msg h3 {
  margin: 15px 0;
  line-height: 1.5;
}

.widgets {
  margin-bottom: 30px;
}

.widgets h2 {
  margin: 7% 5%;
  font-size: 3.8em;
  color: #E1E8DF;
  text-align: center;
}

.widget {
  background-color: transparent;
  border: 1px solid #BFC2BE;
  margin: 1.5%;
  width: 22%;
  height: 150px;
  padding: 0.5% 0;
  border-radius: 4px;
  box-shadow: 0 2px 5px rgba(35, 35, 35, .7);
/*box-shadow: 0 1px 2px rgba(204, 204, 204, .7);*/
}

.hidden {
  display: none;
}

.time {
  font-size: 0.9em;
  margin: 0;
  text-align: center;
}

.dash-heading2 {
  font-size: 0.8em;
  color: #B7BFB2;
  padding-left: 5%;
  margin-top: 0;
}

.dash-heading1 {
  font-size: 1.2em;
  color: #9CA199;
  padding-left: 5%;
  margin-bottom: 0;
}

.heading-border {
  border-bottom: 1px solid #D9E0D5;
}

.legendLabel {
  color: #CCCCCC;
  padding-left: 20%;
}

.sidebar h5 {
  border-bottom: 1px solid #D9E0D5;
}

.gauge {
/*  border: 1px solid red;*/
}

.c3-chart-arc .c3-gauge-value {
  fill: #E1E8DF;
  font-size: 22px !important;
}

.mag svg {
  width: 100%;
  height: 110px;
/*  border: 1px solid red;*/
}

